Yarn update, outdated
-update fixes

--- a/content/posts/rich-content-with-mdx.mdx
+++ b/content/posts/rich-content-with-mdx.mdx
@@ -8,6 +8,8 @@ tags:
   - mdx
 ---
 
+TEST UPDATE
+
 MDX supports to import React component and embed it directly as markdown content.
 
 ## Instagram with react-instagram-embed
