--- a/content/posts/markdown-syntax.mdx
+++ b/content/posts/markdown-syntax.mdx
@@ -75,7 +75,7 @@ Tables aren't part of the core Markdown spec, but Hugo supports supports them ou
 #### Code block with backticks
 
 ```html
-<!DOCTYPE html>
+<DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -86,19 +86,6 @@ Tables aren't part of the core Markdown spec, but Hugo supports supports them ou
   </body>
 </html>
 ```
-
-#### Code block indented with four spaces
-
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-      <meta charset="UTF-8">
-      <title>Example HTML5 Document</title>
-    </head>
-    <body>
-      <p>Test</p>
-    </body>
-    </html>
 
 #### Code block with Hugo's internal highlight shortcode
 
@@ -152,17 +139,3 @@ Tables aren't part of the core Markdown spec, but Hugo supports supports them ou
 - Item
   1. First Sub-item
   2. Second Sub-item
-
-## Other Elements — abbr, sub, sup, kbd, mark
-
-<p>
-  <abbr title="Graphics Interchange Format">GIF</abbr> is a bitmap image format.
-</p>
-
-H<sub>2</sub>O
-
-X<sup>n</sup> + Y<sup>n</sup> = Z<sup>n</sup>
-
-Press <kbd><kbd>CTRL</kbd>+<kbd>ALT</kbd>+<kbd>Delete</kbd></kbd> to end the session.
-
-Most <mark>salamanders</mark> are nocturnal, and hunt for insects, worms, and other small creatures.
